--- a/Ansible/roles/install_filebeat/templates/filebeat.yml.j2
+++ b/Ansible/roles/install_filebeat/templates/filebeat.yml.j2
@@ -11,7 +11,26 @@ filebeat.inputs:
   paths:
     - /var/log/php8.1-fpm.log
   fields:
-    event.module: php-fpm
+    event.module: php-fpm-filestream
+  fields_under_root: true
+- type: filestream
+  id: nginx
+  enabled: true
+  paths:
+    - /var/log/nginx/access.log
+    - /var/log/nginx/*_access_log
+    - /var/log/nginx/error.log
+    - /var/log/nginx/*_error_log
+  fields:
+    event.module: nginx-filestream
+  fields_under_root: true
+- type: filestream
+  id: mysql
+  enabled: true
+  paths:
+    - /var/log/mysql/error.log
+  fields:
+    event.module: mysql-filestream
   fields_under_root: true
 
 # ================================== Logging ===================================
@@ -29,42 +48,90 @@ filebeat.config.modules:
 
 # ======================= Elasticsearch template setting =======================
 
-setup.template.settings:
-  index.number_of_shards: 1
-  index.codec: best_compression
+#setup.template.settings:
+#  index.number_of_shards: 1
+#  index.codec: best_compression
   #_source.enabled: false
 
 # =================================== Kibana ===================================
 
-setup.kibana:
-  host: "http://192.168.0.170:5601"
-  username: "elastic"
-  password: "eH4_AjRigsd11==t+Atu"
-
+#setup.kibana:
+#  host: "http://192.168.0.170:5601"
   #space.id:
 
 # ================================= Dashboards =================================
 # These settings control loading the sample dashboards to the Kibana index. Loading
 # the dashboards is disabled by default and can be enabled either by setting the
 # options here or by using the `setup` command.
-setup.dashboards.enabled: true
+#setup.dashboards.enabled: true
 
 # ================================== Outputs ===================================
 
-# ---------------------------- Elasticsearch Output ----------------------------
-output.elasticsearch:
-  # Array of hosts to connect to.
-  hosts: ["192.168.0.170:9200"]
+# ------------------------------ Logstash Output -------------------------------
+output.logstash:
+  # Boolean flag to enable or disable the output module.
+  enabled: true
 
-  # Performance preset - one of "balanced", "throughput", "scale",
-  # "latency", or "custom".
-  preset: balanced
+  # The Logstash hosts
+  hosts: ["192.168.0.170:5044"]
 
-  # Protocol - either `http` (default) or `https`.
-  protocol: "http"
+  # Number of workers per Logstash host.
+  #worker: 1
 
-  username: "elastic"
-  password: "eH4_AjRigsd11==t+Atu"
+  # Set gzip compression level.
+  #compression_level: 3
+
+  # Configure escaping HTML symbols in strings.
+  #escape_html: false
+
+  # Optional maximum time to live for a connection to Logstash, after which the
+  # connection will be re-established.  A value of `0s` (the default) will
+  # disable this feature.
+  #
+  # Not yet supported for async connections (i.e. with the "pipelining" option set)
+  #ttl: 30s
+
+  # Optionally load-balance events between Logstash hosts. Default is false.
+  #loadbalance: false
+
+  # Number of batches to be sent asynchronously to Logstash while processing
+  # new batches.
+  #pipelining: 2
+
+  # If enabled only a subset of events in a batch of events is transferred per
+  # transaction.  The number of events to be sent increases up to `bulk_max_size`
+  # if no error is encountered.
+  #slow_start: false
+
+  # The number of seconds to wait before trying to reconnect to Logstash
+  # after a network error. After waiting backoff.init seconds, the Beat
+  # tries to reconnect. If the attempt fails, the backoff timer is increased
+  # exponentially up to backoff.max. After a successful connection, the backoff
+  # timer is reset. The default is 1s.
+  #backoff.init: 1s
+
+  # The maximum number of seconds to wait before attempting to connect to
+  # Logstash after a network error. The default is 60s.
+  #backoff.max: 60s
+
+  # Optional index name. The default index name is set to filebeat
+  # in all lowercase.
+  #index: 'filebeat'
+
+  # The number of times to retry publishing an event after a publishing failure.
+  # After the specified number of retries, the events are typically dropped.
+  # Some Beats, such as Filebeat and Winlogbeat, ignore the max_retries setting
+  # and retry until all events are published.  Set max_retries to a value less
+  # than 0 to retry until all events are published. The default is 3.
+  #max_retries: 3
+
+  # The maximum number of events to bulk in a single Logstash request. The
+  # default is 2048.
+  #bulk_max_size: 2048
+
+  # The number of seconds to wait for responses from the Logstash server before
+  # timing out. The default is 30s.
+  #timeout: 30s
 
 # ================================= Processors =================================
 processors:
